--- a/.site-generator/layouts/head.html
+++ b/.site-generator/layouts/head.html
@@ -16,7 +16,8 @@
   <!-- rel prev and next -->
   <link rel="stylesheet" href="{{ styleUrl context 'main.css' }}" />
 
-  <link rel="icon" href="https://decentraland.org/favicon.png" type="image/png" />
+  <link rel="icon" href="https://decentraland.org/favicon-32x32.png" type="image/png" />
+  <link rel="icon" href="https://decentraland.org/favicon.svg" type="image/svg+xml" />
 
   <!-- Canonical link tag -->
   <link rel="canonical" href="{{ data.publicUrl }}">
