--- a/.site-generator/layouts/index.html
+++ b/.site-generator/layouts/index.html
@@ -7,21 +7,21 @@
       <section>
         <h1>Architecture Decisions Records</h1>
 
-        {{#each (sortAsc context.pages "adr") as |adr| }} {{#if (eq adr.layout "adr") }}
-        <a href="{{ adr.slug }}" class="post-item" title="{{ adr.title }}">
+        {{#each (sortAsc context.pages "adr") as |doc| }} {{#if doc.adr }}
+        <a href="{{ doc.slug }}" class="post-item" title="{{ doc.title }}">
           <div class="article-title">
-            <span>ADR-{{ adr.adr }} - {{ adr.title }}</span>
-            <time datetime="{{ isoDate adr.date }}">{{ prettyDate adr.date }}</time>
+            <span>ADR-{{ doc.adr }} - {{ doc.title }}</span>
+            <time datetime="{{ isoDate doc.date }}">{{ prettyDate doc.date }}</time>
           </div>
         </a>
         {{/if}} {{/each}}
         <h1>Request for comments</h1>
 
-        {{#each (sortAsc context.pages "rfc") as |rfc| }} {{#if (eq rfc.layout "rfc") }}
-        <a href="{{ rfc.slug }}" class="post-item" title="{{ rfc.title }}">
+        {{#each (sortAsc context.pages "rfc") as |doc| }} {{#if doc.rfc }}
+        <a href="{{ doc.slug }}" class="post-item" title="{{ doc.title }}">
           <div class="article-title">
-            <span>RFC-{{ rfc.rfc }} - {{ rfc.title }}</span>
-            <time datetime="{{ isoDate rfc.date }}">{{ prettyDate rfc.date }}</time>
+            <span>RFC-{{ doc.rfc }} - {{ doc.title }}</span>
+            <time datetime="{{ isoDate doc.date }}">{{ prettyDate doc.date }}</time>
           </div>
         </a>
         {{/if}} {{/each}} {{{ markdown content }}}
