--- a/.site-generator/scss/respec.scss
+++ b/.site-generator/scss/respec.scss
@@ -1735,8 +1735,8 @@ figcaption {
   }
 }
 
-p > code{background:#fafafa}
-pre > code{display:block;overflow-x:auto;padding:.5em;color:#383a42;background:#fafafa}
+p > code{background:#f6f8fa}
+pre > code{display:block;overflow-x:auto;padding:.5em;color:#24292f;background:#f6f8fa}
 .hljs-comment,.hljs-quote{color:#717277;font-style:italic}
 .hljs-doctag,.hljs-formula,.hljs-keyword{color:#a626a4}
 .hljs-deletion,.hljs-name,.hljs-section,.hljs-selector-tag,.hljs-subst{color:#ca4706;font-weight:700}
