--- a/.site-generator/layouts/comments.html
+++ b/.site-generator/layouts/comments.html
@@ -1,10 +1,12 @@
+{{#if data.rfc}}
 <script
   src="https://giscus.app/client.js"
   data-repo="decentraland/adr"
   data-repo-id="MDEwOlJlcG9zaXRvcnkzMDIxMTgwODk="
   data-category="RFC"
   data-category-id="DIC_kwDOEgH0yc4CRZ51"
-  data-mapping="og:title"
+  data-mapping="specific"
+  data-term="RFC-{{data.rfc}}"
   data-strict="0"
   data-reactions-enabled="1"
   data-emit-metadata="0"
@@ -14,3 +16,4 @@
   crossorigin="anonymous"
   async
 ></script>
+{{/if}}
