--- a/.site-generator/layouts/doc-header.html
+++ b/.site-generator/layouts/doc-header.html
@@ -46,7 +46,7 @@
 
       <dt>Edit this documentation</dt>
       <dd>
-        <a href="https://github.com/decentraland/adr">GitHub</a>
+        <a href="https://github.com/decentraland/adr/blob/main/{{ relativePath }}">GitHub</a>
       </dd>
     </dl>
   </details>
