chore: fix UI issues

--- a/.site-generator/layouts/comments.html
+++ b/.site-generator/layouts/comments.html
@@ -1,4 +1,4 @@
-{{#if data.rfc}}
+{{#if matterfront.rfc}}
 <script
   src="https://giscus.app/client.js"
   data-repo="decentraland/adr"
@@ -6,7 +6,7 @@
   data-category="RFC"
   data-category-id="DIC_kwDOEgH0yc4CRZ51"
   data-mapping="specific"
-  data-term="RFC-{{data.rfc}}"
+  data-term="RFC-{{matterfront.rfc}}"
   data-strict="0"
   data-reactions-enabled="1"
   data-emit-metadata="0"
