--- a/.site-generator/layouts/doc-header.html
+++ b/.site-generator/layouts/doc-header.html
@@ -12,25 +12,25 @@
       />
     </a>
   </p>
-  {{#if data.rfc }}
-  <h1 id="title" class="title">RFC-{{ data.rfc }}: {{ data.title }}</h1>
-  {{else if data.adr}}
-  <h1 id="title" class="title">ADR-{{ data.adr }}: {{ data.title }}</h1>
+  {{#if matterfront.rfc }}
+  <h1 id="title" class="title">RFC-{{ matterfront.rfc }}: {{ matterfront.title }}</h1>
+  {{else if matterfront.adr}}
+  <h1 id="title" class="title">ADR-{{ matterfront.adr }}: {{ matterfront.title }}</h1>
   {{/if}}
   <p id="w3c-state">
-    <time class="dt-published" datetime="{{ isoDate data.date }}">{{ prettyDate data.date }}</time>
+    <time class="dt-published" datetime="{{ isoDate matterfront.date }}">{{ prettyDate matterfront.date }}</time>
   </p>
   <details open="">
     <summary>More details about this document</summary>
     <dl>
       <dt>Latest published version:</dt>
       <dd>
-        <a href="https://rfc.decentraland.org/{{ data.slug }}">https://rfc.decentraland.org/{{ data.slug }}</a>
+        <a href="https://rfc.decentraland.org{{ slug }}">https://rfc.decentraland.org{{ slug }}</a>
       </dd>
 
-      {{#if data.authors }}
+      {{#if matterfront.authors }}
       <dt>Authors:</dt>
-      {{#each data.authors as |author| }}
+      {{#each matterfront.authors as |author| }}
       <dd class="editor p-author h-card vcard">
         <a class="u-url url p-name fn" href="https://github.com/{{ author }}">{{ author }}</a>
       </dd>
