--- a/.site-generator/layouts/draft.html
+++ b/.site-generator/layouts/draft.html
@@ -1,8 +1,8 @@
-{{#if (eq data.status "ACCEPTED")}}
+{{#if (eq matterfront.status "ACCEPTED")}}
 <svg xmlns="http://www.w3.org/2000/svg" width="180" height="500" class="floating-tag">
   <g style="font: 750 70px Arial, sans-serif; letter-spacing: 3px" fill="#F6f8fa" stroke="#a6f8aa" stroke-width="3">
     <text x="50%" y="50%" transform="translate(50 200) rotate(-90) translate(-140 -190)" style="text-anchor: middle">
-      {{data.status}}
+      {{matterfront.status}}
     </text>
   </g>
 </svg>
@@ -18,7 +18,7 @@
 <svg xmlns="http://www.w3.org/2000/svg" width="180" height="500" class="floating-tag">
   <g style="font: 750 70px Arial, sans-serif; letter-spacing: 3px" fill="#F6f8fa" stroke="#a6a8aa" stroke-width="3">
     <text x="50%" y="50%" transform="translate(50 200) rotate(-90) translate(-140 -190)" style="text-anchor: middle">
-      {{data.status}}
+      {{matterfront.status}}
     </text>
   </g>
 </svg>
