--- a/.site-generator/layouts/head.html
+++ b/.site-generator/layouts/head.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>{{ data.title }}</title>
+  <title>{{ matterfront.title }}</title>
 
-  <meta name="description" content="{{ data.description }}" />
-  <meta name="keywords" content="{{ join keywords ', ' }}" />
+  <meta name="description" content="{{ matterfront.description }}" />
+  <meta name="keywords" content="{{ join matterfront.keywords ', ' }}" />
 
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
@@ -20,15 +20,15 @@
   <link rel="icon" href="https://decentraland.org/favicon.svg" type="image/svg+xml" />
 
   <!-- Canonical link tag -->
-  <link rel="canonical" href="{{ data.publicUrl }}" />
+  <link rel="canonical" href="{{ publicUrl }}" />
 
   {{#if context.DRAFT}}
   <meta name="robots" content="noindex" />
   {{/if}}
 
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="{{ data.publicUrl }}" />
-  <meta property="og:title" content="{{ data.title }}" />
+  <meta property="og:url" content="{{ publicUrl }}" />
+  <meta property="og:title" content="{{ matterfront.title }}" />
   <meta property="og:image" content="https://decentraland.org/favicon.svg" />
   <meta property="og:description" content="" />
   <meta property="og:site_name" content="Decentraland ADR & RFC" />
