--- a/.site-generator/layouts/index.html
+++ b/.site-generator/layouts/index.html
@@ -7,21 +7,21 @@
       <section>
         <h1>Architecture Decisions Records</h1>
 
-        {{#each (sortAsc context.pages "adr") as |doc| }} {{#if doc.adr }}
-        <a href="{{ doc.slug }}" class="post-item" title="{{ doc.title }}">
-          <div class="article-title status-{{ doc.status }}">
-            <span>ADR-{{ doc.adr }} - {{ doc.title }} <span class="status">{{doc.status}}</span></span>
-            <time datetime="{{ isoDate doc.date }}">{{ prettyDate doc.date }}</time>
+        {{#each (sortAsc context.pages "matterfront.adr") as |doc| }} {{#if doc.matterfront.adr }}
+        <a href="{{ publicUrl }}" class="post-item" title="{{ doc.matterfront.title }}">
+          <div class="article-title status-{{ doc.matterfront.status }}">
+            <span>ADR-{{ doc.matterfront.adr }} - {{ doc.matterfront.title }} <span class="status">{{doc.matterfront.status}}</span></span>
+            <time datetime="{{ isoDate doc.matterfront.date }}">{{ prettyDate doc.matterfront.date }}</time>
           </div>
         </a>
         {{/if}} {{/each}}
         <h1>Request for comments</h1>
 
-        {{#each (sortAsc context.pages "rfc") as |doc| }} {{#if doc.rfc }}
-        <a href="{{ doc.slug }}" class="post-item" title="{{ doc.title }}">
-          <div class="article-title status-{{ doc.status }}">
-            <span>RFC-{{ doc.rfc }} - {{ doc.title }} <span class="status">{{doc.status}}</span></span>
-            <time datetime="{{ isoDate doc.date }}">{{ prettyDate doc.date }}</time>
+        {{#each (sortAsc context.pages "matterfront.rfc") as |doc| }} {{#if doc.matterfront.rfc }}
+        <a href="{{ publicUrl }}" class="post-item" title="{{ doc.matterfront.title }}">
+          <div class="article-title status-{{ doc.matterfront.status }}">
+            <span>RFC-{{ doc.matterfront.rfc }} - {{ doc.matterfront.title }} <span class="status">{{doc.matterfront.status}}</span></span>
+            <time datetime="{{ isoDate doc.matterfront.date }}">{{ prettyDate doc.matterfront.date }}</time>
           </div>
         </a>
         {{/if}} {{/each}} {{{ markdown content }}}
