--- a/.site-generator/layouts/doc.html
+++ b/.site-generator/layouts/doc.html
@@ -4,28 +4,20 @@ layout: home
 
 {{> doc-header }} {{{ markdown content }}} {{> draft }} {{> comments }}
 
-<script src="/scripts/webfont.js"></script>
-<script src="/scripts/snap.svg-min.js"></script>
-<script src="/scripts/underscore-min.js"></script>
-<script src="/scripts/sequence-diagram-min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 
 <script>
+  mermaid.sequenceConfig = {
+    diagramMarginX: 0,
+    diagramMarginY: 0,
+  };
+  mermaid.initialize({startOnLoad:true, fontFamily: 'sans-serif'});
+  mermaid.init(undefined, '.language-mermaid');
   for (const dot of document.querySelectorAll(".language-x-dot")) {
     const figure = document.createElement("figure")
     const pre = dot.parentElement
     figure.appendChild(dot)
     pre.parentElement.replaceChild(figure, pre)
   }
-  for (const diagram of document.querySelectorAll(".language-sequence")) {
-    const figure = document.createElement("figure")
-    const pre = diagram.parentElement
-    pre.parentElement.replaceChild(figure, pre)
-    try {
-      var d = Diagram.parse(diagram.textContent)
-      var options = { theme: "simple" }
-      console.log(d.drawSVG(figure, options))
-    } catch (err) {
-      diagram.textContent = err.toString()
-    }
-  }
 </script>
+
