--- a/.site-generator/layouts/doc-header.html
+++ b/.site-generator/layouts/doc-header.html
@@ -44,9 +44,11 @@
         <a href="https://github.com/decentraland/adr/issues/">open issues</a>)
       </dd>
 
-      <dt>Edit this documentation</dt>
+      <dt>Edit this documentation:</dt>
       <dd>
         <a href="https://github.com/decentraland/adr/blob/main/{{ relativePath }}">GitHub</a>
+        <a href="https://github.com/decentraland/adr/commits/main/{{ relativePath }}" rel="nofollow" target="_blank">View commits</a>
+        <a href="https://github.githistory.xyz/decentraland/adr/blob/main/{{ relativePath }}" rel="nofollow" target="_blank">View commits on githistory.xyz</a>
       </dd>
     </dl>
   </details>
