set manual discussions

--- a/.site-generator/layouts/doc-header.html
+++ b/.site-generator/layouts/doc-header.html
@@ -41,14 +41,23 @@
         <a href="https://github.com/decentraland/adr/">GitHub decentraland/adr</a>
         (<a href="https://github.com/decentraland/adr/pulls/">pull requests</a>,
         <a href="https://github.com/decentraland/adr/issues/new/choose">new issue</a>,
-        <a href="https://github.com/decentraland/adr/issues/">open issues</a>)
+        <a href="https://github.com/decentraland/adr/issues/">open issues</a>){{~#if matterfront.discussion}},
+        <strong><a href="{{matterfront.discussion}}" target="_blank">discussion</a></strong
+        >{{/if}}
       </dd>
 
       <dt>Edit this documentation:</dt>
       <dd>
         <a href="https://github.com/decentraland/adr/blob/main/{{ relativePath }}">GitHub</a>
-        <a href="https://github.com/decentraland/adr/commits/main/{{ relativePath }}" rel="nofollow" target="_blank">View commits</a>
-        <a href="https://github.githistory.xyz/decentraland/adr/blob/main/{{ relativePath }}" rel="nofollow" target="_blank">View commits on githistory.xyz</a>
+        <a href="https://github.com/decentraland/adr/commits/main/{{ relativePath }}" rel="nofollow" target="_blank"
+          >View commits</a
+        >
+        <a
+          href="https://github.githistory.xyz/decentraland/adr/blob/main/{{ relativePath }}"
+          rel="nofollow"
+          target="_blank"
+          >View commits on githistory.xyz</a
+        >
       </dd>
     </dl>
   </details>
