--- a/.site-generator/layouts/doc.html
+++ b/.site-generator/layouts/doc.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-{{> doc-header }} {{{ markdown content }}} {{> draft }} {{> comments }}
+{{> doc-header }} {{{ markdown content }}} {{> draft }}
 
 <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 
