--- a/.site-generator/scss/respec.scss
+++ b/.site-generator/scss/respec.scss
@@ -184,8 +184,8 @@ body {
   /* Layout */
   max-width: 50em; /* limit line length to 50em for readability   */
   margin: 0 auto 4em; /* center text within page, space for footers  */
-  padding: 1.6em 1.5em 0 50px; /* assume 16px font size for downlevel clients */
-  padding: 1.6em 1.5em 0 calc(26px + 1.5em); /* leave space for status flag   */
+  padding: 1.6em 1.5em 38vh 50px; /* assume 16px font size for downlevel clients */
+  padding: 1.6em 1.5em 38vh calc(26px + 1.5em); /* leave space for status flag   */
 
   /* Typography */
   line-height: 1.5;
