--- a/.site-generator/layouts/doc-header.html
+++ b/.site-generator/layouts/doc-header.html
@@ -20,7 +20,7 @@
   <p id="w3c-state">
     <time class="dt-published" datetime="{{ isoDate matterfront.date }}">{{ prettyDate matterfront.date }}</time>
   </p>
-  <details open="">
+  <details>
     <summary>More details about this document</summary>
     <dl>
       <dt>Latest published version:</dt>
