--- a/.site-generator/scss/main.scss
+++ b/.site-generator/scss/main.scss
@@ -32,16 +32,27 @@
     padding: 1em 0;
   }
 
-  .status-ACCEPTED .status {
+  .status-Final .status,
+  .status-Living .status {
     display: none;
   }
 
-  .status-PROPOSED,
-  .status-DRAFT {
+  .status-Idea {
+    color: #999;
+  }
+  .status-Draft {
     color: #d73a49;
   }
 
-  .status-DEPRECATED {
+  .status-Review {
+    color: #ef7e3a;
+  }
+
+  .status-LastCall {
+    color: magenta;
+  }
+
+  .status-Withdrawn {
     text-decoration: line-through !important;
     color: #999;
   }
