--- a/.site-generator/layouts/doc.html
+++ b/.site-generator/layouts/doc.html
@@ -1,5 +1,9 @@
 ---
-layout: home
+layout: spec
 ---
 
-{{> doc-header }} {{{ markdown content }}} {{> draft }}
+{{> doc-header }} {{{ markdown content }}}
+
+{{> license-section }}
+
+{{> draft }}
