--- a/.site-generator/layouts/index.html
+++ b/.site-generator/layouts/index.html
@@ -5,7 +5,7 @@
     <main role="main">
       {{> nav}}
       <section>
-        <h1>Architecture Decisions Records</h1>
+        <h1>{{ matterfront.title }}</h1>
 
         {{{ markdown content }}}
 
@@ -25,6 +25,7 @@
           {{/each}}
         {{/each}}
 
+        {{> license-section }}
       </section>
     </main>
     {{>footer}}
