--- a/.site-generator/layouts/index.html
+++ b/.site-generator/layouts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   {{> head}}
-  <body>
+  <body class="toc-inline">
     <main role="main">
       {{> nav}}
       <section>
