--- a/.site-generator/layouts/spec.html
+++ b/.site-generator/layouts/spec.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   {{> head}}
-  <body class="spec">
+  <body class="spec toc-inline">
     {{> nav}} {{{ content }}}
     {{>footer}}
   </body>
