--- a/.site-generator/layouts/doc-header.html
+++ b/.site-generator/layouts/doc-header.html
@@ -21,7 +21,7 @@
     <dl>
       <dt>Latest published version:</dt>
       <dd>
-        <a href="https://rfc.decentraland.org{{ slug }}">https://rfc.decentraland.org{{ slug }}</a>
+        <a href="https://adr.decentraland.org{{ slug }}">https://adr.decentraland.org{{ slug }}</a>
       </dd>
 
       {{#if matterfront.authors }}
