--- a/.site-generator/scss/main.scss
+++ b/.site-generator/scss/main.scss
@@ -1,4 +1,5 @@
 @import "respec.scss";
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=JetBrains+Mono:wght@400;700&display=swap');
 
 .post-item {
   .article-title {
