docs: updating ADR 277, making changes to introduce deprecated state

--- a/.site-generator/scss/main.scss
+++ b/.site-generator/scss/main.scss
@@ -53,6 +53,12 @@
     color: magenta;
   }
 
+  .status-Deprecated {
+    color: #555;
+    text-decoration: line-through !important;
+    font-style: italic;
+  }
+  
   .status-Withdrawn {
     text-decoration: line-through !important;
     color: #999;
